--- a/public/css/output.css
+++ b/public/css/output.css
@@ -579,8 +579,44 @@ video {
   top: 0px;
 }
 
-.top-\[10px\] {
-  top: 10px;
+.-top-8 {
+  top: -2rem;
+}
+
+.-left-8 {
+  left: -2rem;
+}
+
+.-bottom-4 {
+  bottom: -1rem;
+}
+
+.-right-4 {
+  right: -1rem;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.right-8 {
+  right: 2rem;
+}
+
+.bottom-8 {
+  bottom: 2rem;
+}
+
+.top-3 {
+  top: 0.75rem;
 }
 
 .left-\[-10px\] {
@@ -595,24 +631,20 @@ video {
   top: 90px;
 }
 
-.left-0 {
-  left: 0px;
+.bottom-2 {
+  bottom: 0.5rem;
 }
 
 .bottom-\[20px\] {
   bottom: 20px;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
 .left-\[-45px\] {
   left: -45px;
 }
 
-.bottom-\[-8px\] {
-  bottom: -8px;
+.-bottom-2 {
+  bottom: -0.5rem;
 }
 
 .left-\[95px\] {
@@ -623,24 +655,16 @@ video {
   top: 25px;
 }
 
-.right-\[30px\] {
-  right: 30px;
-}
-
 .bottom-\[50px\] {
   bottom: 50px;
-}
-
-.left-72 {
-  left: 18rem;
 }
 
 .left-\[79px\] {
   left: 79px;
 }
 
-.bottom-\[10px\] {
-  bottom: 10px;
+.bottom-3 {
+  bottom: 0.75rem;
 }
 
 .top-2 {
@@ -667,6 +691,14 @@ video {
   bottom: 45px;
 }
 
+.-bottom-8 {
+  bottom: -2rem;
+}
+
+.-bottom-3 {
+  bottom: -0.75rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -675,20 +707,17 @@ video {
   z-index: 0;
 }
 
-.col-span-2 {
-  grid-column: span 2 / span 2;
-}
-
-.col-start-2 {
-  grid-column-start: 2;
-}
-
 .m-px {
   margin: 1px;
 }
 
 .m-2 {
   margin: 0.5rem;
+}
+
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .my-3 {
@@ -701,6 +730,11 @@ video {
   margin-right: auto;
 }
 
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
 .mr-3 {
   margin-right: 0.75rem;
 }
@@ -709,28 +743,48 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.mr-\[6px\] {
-  margin-right: 6px;
+.mr-2 {
+  margin-right: 0.5rem;
 }
 
-.mt-\[6px\] {
-  margin-top: 6px;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
-.mt-\[-8px\] {
-  margin-top: -8px;
+.-mt-2 {
+  margin-top: -0.5rem;
 }
 
-.ml-\[-18px\] {
-  margin-left: -18px;
+.-ml-4 {
+  margin-left: -1rem;
 }
 
-.ml-\[6px\] {
-  margin-left: 6px;
+.-mr-14 {
+  margin-right: -3.5rem;
 }
 
-.mb-\[-8px\] {
-  margin-bottom: -8px;
+.-mb-40 {
+  margin-bottom: -10rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.-mb-2 {
+  margin-bottom: -0.5rem;
+}
+
+.-ml-2 {
+  margin-left: -0.5rem;
+}
+
+.-mt-9 {
+  margin-top: -2.25rem;
+}
+
+.-mr-7 {
+  margin-right: -1.75rem;
 }
 
 .mb-5 {
@@ -749,16 +803,16 @@ video {
   margin-top: 0.75rem;
 }
 
-.mb-\[-18px\] {
-  margin-bottom: -18px;
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .mt-\[-6px\] {
   margin-top: -6px;
-}
-
-.ml-\[-8px\] {
-  margin-left: -8px;
 }
 
 .mt-\[-60px\] {
@@ -769,20 +823,36 @@ video {
   margin-right: -28px;
 }
 
-.mt-\[-45px\] {
-  margin-top: -45px;
+.-ml-16 {
+  margin-left: -4rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .ml-\[-52px\] {
   margin-left: -52px;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
+.-mb-5 {
+  margin-bottom: -1.25rem;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
+}
+
+.ml-5 {
+  margin-left: 1.25rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .block {
@@ -825,12 +895,12 @@ video {
   height: 100vh;
 }
 
-.h-\[30px\] {
-  height: 30px;
+.h-8 {
+  height: 2rem;
 }
 
-.h-\[15px\] {
-  height: 15px;
+.h-4 {
+  height: 1rem;
 }
 
 .h-\[50px\] {
@@ -841,16 +911,24 @@ video {
   height: 100%;
 }
 
-.h-\[10px\] {
-  height: 10px;
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-\[530px\] {
+  height: 530px;
+}
+
+.h-20 {
+  height: 5rem;
 }
 
 .h-\[350px\] {
   height: 350px;
 }
 
-.h-\[80px\] {
-  height: 80px;
+.h-6 {
+  height: 1.5rem;
 }
 
 .h-fit {
@@ -858,24 +936,24 @@ video {
   height: fit-content;
 }
 
-.h-6 {
-  height: 1.5rem;
-}
-
-.h-\[250px\] {
-  height: 250px;
+.h-12 {
+  height: 3rem;
 }
 
 .h-\[70px\] {
   height: 70px;
 }
 
-.h-\[80vh\] {
-  height: 80vh;
+.h-5\/6 {
+  height: 83.333333%;
 }
 
-.h-\[300px\] {
-  height: 300px;
+.h-\[80px\] {
+  height: 80px;
+}
+
+.h-\[400px\] {
+  height: 400px;
 }
 
 .h-\[35px\] {
@@ -886,8 +964,16 @@ video {
   height: 90px;
 }
 
+.h-64 {
+  height: 16rem;
+}
+
 .h-\[85px\] {
   height: 85px;
+}
+
+.h-24 {
+  height: 6rem;
 }
 
 .max-h-\[600px\] {
@@ -898,16 +984,16 @@ video {
   min-height: 500px;
 }
 
-.w-\[10px\] {
-  width: 10px;
+.w-3 {
+  width: 0.75rem;
 }
 
 .w-\[70px\] {
   width: 70px;
 }
 
-.w-\[15px\] {
-  width: 15px;
+.w-4 {
+  width: 1rem;
 }
 
 .w-\[120px\] {
@@ -919,36 +1005,40 @@ video {
   width: fit-content;
 }
 
-.w-\[300px\] {
-  width: 300px;
+.w-\[400px\] {
+  width: 400px;
 }
 
 .w-full {
   width: 100%;
 }
 
-.w-\[150px\] {
-  width: 150px;
+.w-40 {
+  width: 10rem;
 }
 
 .w-6 {
   width: 1.5rem;
 }
 
-.w-\[90\%\] {
-  width: 90%;
+.w-14 {
+  width: 3.5rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-12 {
+  width: 3rem;
 }
 
 .w-\[90px\] {
   width: 90px;
 }
 
-.w-\[200px\] {
-  width: 200px;
-}
-
-.w-\[100\%\] {
-  width: 100%;
+.w-\[150px\] {
+  width: 150px;
 }
 
 .w-\[50px\] {
@@ -959,12 +1049,29 @@ video {
   width: 35px;
 }
 
+.w-48 {
+  width: 12rem;
+}
+
+.max-w-\[70vw\] {
+  max-width: 70vw;
+}
+
 .max-w-7xl {
   max-width: 80rem;
 }
 
+.max-w-2xl {
+  max-width: 42rem;
+}
+
 .origin-\[0\] {
   transform-origin: 0;
+}
+
+.translate-y-full {
+  --tw-translate-y: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .-translate-y-4 {
@@ -996,8 +1103,16 @@ video {
   cursor: pointer;
 }
 
+.cursor-not-allowed {
+  cursor: not-allowed;
+}
+
 .resize {
   resize: both;
+}
+
+.list-disc {
+  list-style-type: disc;
 }
 
 .appearance-none {
@@ -1006,16 +1121,12 @@ video {
           appearance: none;
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.grid-cols-5 {
-  grid-template-columns: repeat(5, minmax(0, 1fr));
-}
-
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -1024,10 +1135,6 @@ video {
 
 .place-content-center {
   place-content: center;
-}
-
-.place-items-center {
-  place-items: center;
 }
 
 .items-end {
@@ -1054,12 +1161,12 @@ video {
   justify-content: space-between;
 }
 
-.justify-around {
-  justify-content: space-around;
-}
-
 .justify-evenly {
   justify-content: space-evenly;
+}
+
+.gap-4 {
+  gap: 1rem;
 }
 
 .gap-3 {
@@ -1137,9 +1244,9 @@ video {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#c7c5c5\] {
+.bg-gray-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(199 197 197 / var(--tw-bg-opacity));
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -1152,24 +1259,14 @@ video {
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
 .bg-gray-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-
-.bg-slate-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
-}
-
-.bg-emerald-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(52 211 153 / var(--tw-bg-opacity));
-}
-
-.bg-slate-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 
 .bg-slate-400 {
@@ -1177,8 +1274,57 @@ video {
   background-color: rgb(148 163 184 / var(--tw-bg-opacity));
 }
 
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.bg-purple-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(233 213 255 / var(--tw-bg-opacity));
+}
+
+.bg-pink-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 207 232 / var(--tw-bg-opacity));
+}
+
+.bg-zinc-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 63 70 / var(--tw-bg-opacity));
+}
+
+.bg-green-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
+}
+
+.bg-gradient-to-l {
+  background-image: linear-gradient(to left, var(--tw-gradient-stops));
+}
+
+.from-transparent {
+  --tw-gradient-from: transparent;
+  --tw-gradient-to: rgb(0 0 0 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-gray-800 {
+  --tw-gradient-from: #1f2937;
+  --tw-gradient-to: rgb(31 41 55 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-gray-800 {
+  --tw-gradient-to: #1f2937;
+}
+
+.to-transparent {
+  --tw-gradient-to: transparent;
 }
 
 .bg-cover {
@@ -1187,6 +1333,18 @@ video {
 
 .bg-center {
   background-position: center;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
+
+.fill-gray-800 {
+  fill: #1f2937;
+}
+
+.\!fill-gray-800 {
+  fill: #1f2937 !important;
 }
 
 .object-contain {
@@ -1211,9 +1369,9 @@ video {
   padding: 0.25rem;
 }
 
-.py-\[15px\] {
-  padding-top: 15px;
-  padding-bottom: 15px;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .px-1 {
@@ -1236,6 +1394,11 @@ video {
   padding-right: 0.5rem;
 }
 
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .px-2\.5 {
   padding-left: 0.625rem;
   padding-right: 0.625rem;
@@ -1243,14 +1406,6 @@ video {
 
 .pb-\[50px\] {
   padding-bottom: 50px;
-}
-
-.pl-\[30px\] {
-  padding-left: 30px;
-}
-
-.pr-\[40px\] {
-  padding-right: 40px;
 }
 
 .pb-2\.5 {
@@ -1269,8 +1424,13 @@ video {
   text-align: start;
 }
 
-.text-\[10px\] {
-  font-size: 10px;
+.font-space {
+  font-family: "Space Grotesk", sans-serif;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .text-5xl {
@@ -1278,8 +1438,9 @@ video {
   line-height: 1;
 }
 
-.text-\[75px\] {
-  font-size: 75px;
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
 }
 
 .text-xl {
@@ -1291,20 +1452,21 @@ video {
   font-size: 34px;
 }
 
+.text-\[75px\] {
+  font-size: 75px;
+}
+
 .text-\[14px\] {
   font-size: 14px;
 }
 
-.text-\[30px\] {
-  font-size: 30px;
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-\[35px\] {
   font-size: 35px;
-}
-
-.text-\[38px\] {
-  font-size: 38px;
 }
 
 .text-\[24px\] {
@@ -1318,6 +1480,11 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -1342,22 +1509,27 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
 .text-gray-800 {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
-.opacity-60 {
-  opacity: 0.6;
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
-.opacity-0 {
-  opacity: 0;
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.line-through {
+  text-decoration-line: line-through;
+}
+
+.opacity-60 {
+  opacity: 0.6;
 }
 
 .shadow-md {
@@ -1386,6 +1558,12 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1394,8 +1572,8 @@ video {
   transition-duration: 150ms;
 }
 
-.transition-all {
-  transition-property: all;
+.transition-transform {
+  transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1416,8 +1594,51 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hover\:h-64:hover {
-  height: 16rem;
+@font-face {
+  font-family: "Space Grotesk";
+
+  src: url("/public/fonts/SpaceGrotesk-Bold.ttf") format("truetype");
+
+  font-weight: bold;
+
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Space Grotesk";
+
+  src: url("/public/fonts/SpaceGrotesk-Regular.ttf") format("truetype");
+
+  font-style: normal;
+}
+
+html.sr .load-hidden {
+  display: none;
+}
+
+.swiper-wrapper {
+  transition-timing-function: linear;
+}
+
+::-webkit-scrollbar-track {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+::-webkit-scrollbar {
+  width: 0.75rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+::-webkit-scrollbar-thumb {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
+
+.hover\:h-fit:hover {
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 .hover\:bg-gray-200:hover {
@@ -1438,6 +1659,10 @@ video {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:underline:hover {
+  text-decoration-line: underline;
 }
 
 .hover\:shadow-lg:hover {
@@ -1509,8 +1734,13 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.group:hover .group-hover\:opacity-100 {
-  opacity: 1;
+.group:hover .group-hover\:translate-y-0 {
+  --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group:hover .group-hover\:underline {
+  text-decoration-line: underline;
 }
 
 .peer:-moz-placeholder-shown ~ .peer-placeholder-shown\:top-1\/2 {
@@ -1584,32 +1814,52 @@ video {
 }
 
 @media not all and (min-width: 640px) {
-  .max-sm\:col-span-1 {
-    grid-column: span 1 / span 1;
-  }
-
   .max-sm\:h-\[300px\] {
     height: 300px;
   }
 
-  .max-sm\:w-\[100\%\] {
+  .max-sm\:w-full {
     width: 100%;
   }
+}
 
-  .max-sm\:grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
+@media (min-width: 640px) {
+  .sm\:my-0 {
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
 
-  .max-sm\:gap-0 {
-    gap: 0px;
+  .sm\:mb-0 {
+    margin-bottom: 0px;
   }
 
-  .max-sm\:p-0 {
-    padding: 0px;
+  .sm\:flex {
+    display: flex;
   }
 
-  .max-sm\:pr-\[20px\] {
-    padding-right: 20px;
+  .sm\:h-screen {
+    height: 100vh;
+  }
+
+  .sm\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
+  .sm\:w-2\/5 {
+    width: 40%;
+  }
+
+  .sm\:w-3\/5 {
+    width: 60%;
+  }
+
+  .sm\:min-w-\[1000px\] {
+    min-width: 1000px;
+  }
+
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
@@ -1622,16 +1872,28 @@ video {
     display: block;
   }
 
+  .md\:flex {
+    display: flex;
+  }
+
   .md\:hidden {
     display: none;
+  }
+
+  .md\:h-16 {
+    height: 4rem;
   }
 
   .md\:h-screen {
     height: 100vh;
   }
 
-  .md\:h-\[70px\] {
-    height: 70px;
+  .md\:h-3\/4 {
+    height: 75%;
+  }
+
+  .md\:h-64 {
+    height: 16rem;
   }
 
   .md\:w-\[300px\] {
@@ -1647,12 +1909,12 @@ video {
     width: 80vw;
   }
 
-  .md\:w-\[500px\] {
-    width: 500px;
+  .md\:w-\[600px\] {
+    width: 600px;
   }
 
-  .md\:max-w-\[450px\] {
-    max-width: 450px;
+  .md\:max-w-md {
+    max-width: 28rem;
   }
 
   .md\:flex-row {
@@ -1666,10 +1928,30 @@ video {
   .md\:text-center {
     text-align: center;
   }
+
+  .hover\:md\:h-full:hover {
+    height: 100%;
+  }
 }
 
 @media (min-width: 1024px) {
-  .lg\:w-\[350px\] {
-    width: 350px;
+  .lg\:h-72 {
+    height: 18rem;
+  }
+
+  .lg\:w-\[450px\] {
+    width: 450px;
+  }
+
+  .lg\:max-w-xl {
+    max-width: 36rem;
+  }
+
+  .lg\:max-w-4xl {
+    max-width: 56rem;
+  }
+
+  .hover\:lg\:h-80:hover {
+    height: 20rem;
   }
 }
