--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,36 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: "Space Grotesk";
+    src: url("/public/fonts/SpaceGrotesk-Bold.ttf") format("truetype");
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Space Grotesk";
+    src: url("/public/fonts/SpaceGrotesk-Regular.ttf") format("truetype");
+    font-style: normal;
+}
+
+html.sr .load-hidden {
+    @apply hidden;
+}
+
+.swiper-wrapper {
+    transition-timing-function: linear;
+}
+
+::-webkit-scrollbar-track {
+    @apply bg-gray-200;
+}
+
+::-webkit-scrollbar {
+    @apply w-3 bg-gray-200;
+}
+
+::-webkit-scrollbar-thumb {
+    @apply bg-gray-600;
+}
