--- a/public/css/output.css
+++ b/public/css/output.css
@@ -691,12 +691,28 @@ video {
   bottom: 45px;
 }
 
+.-bottom-3 {
+  bottom: -0.75rem;
+}
+
 .-bottom-8 {
   bottom: -2rem;
 }
 
-.-bottom-3 {
-  bottom: -0.75rem;
+.top-4 {
+  top: 1rem;
+}
+
+.top-8 {
+  top: 2rem;
+}
+
+.top-12 {
+  top: 3rem;
+}
+
+.top-14 {
+  top: 3.5rem;
 }
 
 .z-10 {
@@ -843,6 +859,10 @@ video {
   margin-top: 5rem;
 }
 
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
 .mt-12 {
   margin-top: 3rem;
 }
@@ -851,8 +871,8 @@ video {
   margin-left: 1.25rem;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .block {
@@ -970,10 +990,6 @@ video {
 
 .h-\[85px\] {
   height: 85px;
-}
-
-.h-24 {
-  height: 6rem;
 }
 
 .max-h-\[600px\] {
@@ -1123,10 +1139,6 @@ video {
 
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -1339,10 +1351,6 @@ video {
   background-repeat: no-repeat;
 }
 
-.fill-gray-800 {
-  fill: #1f2937;
-}
-
 .\!fill-gray-800 {
   fill: #1f2937 !important;
 }
@@ -1485,6 +1493,11 @@ video {
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
 }
 
 .font-bold {
@@ -1661,10 +1674,6 @@ html.sr .load-hidden {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.hover\:underline:hover {
-  text-decoration-line: underline;
-}
-
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1824,6 +1833,10 @@ html.sr .load-hidden {
 }
 
 @media (min-width: 640px) {
+  .sm\:top-\[25px\] {
+    top: 25px;
+  }
+
   .sm\:my-0 {
     margin-top: 0px;
     margin-bottom: 0px;
@@ -1831,6 +1844,14 @@ html.sr .load-hidden {
 
   .sm\:mb-0 {
     margin-bottom: 0px;
+  }
+
+  .sm\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .sm\:-mb-5 {
+    margin-bottom: -1.25rem;
   }
 
   .sm\:flex {
@@ -1854,12 +1875,29 @@ html.sr .load-hidden {
     width: 60%;
   }
 
+  .sm\:w-\[400px\] {
+    width: 400px;
+  }
+
   .sm\:min-w-\[1000px\] {
     min-width: 1000px;
   }
 
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:text-\[75px\] {
+    font-size: 75px;
+  }
+
+  .sm\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .sm\:text-\[70px\] {
+    font-size: 70px;
   }
 }
 
@@ -1890,10 +1928,6 @@ html.sr .load-hidden {
 
   .md\:h-3\/4 {
     height: 75%;
-  }
-
-  .md\:h-64 {
-    height: 16rem;
   }
 
   .md\:w-\[300px\] {
@@ -1935,10 +1969,6 @@ html.sr .load-hidden {
 }
 
 @media (min-width: 1024px) {
-  .lg\:h-72 {
-    height: 18rem;
-  }
-
   .lg\:w-\[450px\] {
     width: 450px;
   }
